--- a/Views/UsuariosView.xaml
+++ b/Views/UsuariosView.xaml
@@ -7,6 +7,17 @@
         mc:Ignorable="d"
         Title="Lista de Usuarios" Height="450" Width="800">
     <Grid>
-        <DataGrid ItemsSource = "{Binding usuarios}" AutoGenerateColumns = "true"/>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <DataGrid SelectedItem = "{Binding Seleccionado}" Grid.Row = "0" Grid.Column = "0" ItemsSource = "{Binding Usuarios}" AutoGenerateColumns = "true"/>
+        <StackPanel Grid.Row = "1" Grid.Column = "0" Orientation = "Vertical">
+            <Button Grid.Row = "1" Grid.Column = "0" Content="Nuevo" Command= "{Binding Instancia}" CommandParameter ="Nuevo"/>
+            <Button Grid.Row = "1" Grid.Column = "0" Content="Eliminar" Command= "{Binding Instancia}" CommandParameter ="Eliminar"/>
+        </StackPanel>
     </Grid>
 </Window>
