--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,21 +1,35 @@
-﻿<Window x:Class="ControlDeColegio.MainWindow"
+﻿<mah:MetroWindow x:Class="ControlDeColegio.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ControlDeColegio"
+        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Control de Colegio V1.0.0" WindowState="Maximized">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height = "Auto"/>
+            <RowDefinition Height = "*"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Button Grid.Row = "0" Grid.Column = "0" Content = "Usuarios" Click="VentanaUsuarios"/>
-        <Button Grid.Row = "0" Grid.Column = "1" Content = "Roles" Click="VentanaRoles"/>
+        <StackPanel Grid.Row = "0" Grid.Column = "0" Orientation = "Horizontal">
+            <Menu>
+                <MenuItem Header = "Menu">
+                    <MenuItem Header = "Login">
+                        <MenuItem Header = "Iniciar secion"/>
+                    </MenuItem>
+                    <MenuItem Header = "Catalogos">
+                        <MenuItem Header = "Usuarios" Command = "{Binding Instancia}" CommandParameter = "Usuarios"/>
+                        <MenuItem Header = "Roles" Command = "{Binding Instancia}" CommandParameter = "Roles"/>
+                        <MenuItem Header = "Reportes"/>
+                    </MenuItem>
+                    <Separator/>
+                    <MenuItem Header = "Acerca de ...">
+                        <MenuItem Header = "Pagina Web"/>
+                    </MenuItem>
+                </MenuItem>
+            </Menu>
+        </StackPanel>
+        <Image Grid.Row = "1" Source = "{Binding Fondo}"  Stretch = "fill"/>
     </Grid>
-</Window>
+</mah:MetroWindow>
