--- a/Views/UsuarioView.xaml
+++ b/Views/UsuarioView.xaml
@@ -1,11 +1,12 @@
-<Window x:Class="ControlDeColegio.Views.UsuarioView"
+<mah:MetroWindow x:Class="ControlDeColegio.Views.UsuarioView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ControlDeColegio"
+        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        Title="Formulario de Usuarios" Height="450" Width="800">
+        Title="Formulario de Usuarios" Height="450" Width="800" WindowStartupLocation = "CenterScreen" Name="FrmUsuario">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -32,12 +33,12 @@
         <Label Content = "Username" Grid.Row = "3" Grid.Column = "0"/>
         <TextBox Grid.Row = "3" Grid.Column = "1" Text = "{Binding Username}"/>
        
-        <Label Content = "Password" Grid.Row = "4" Grid.Column = "0"/>
-        <PasswordBox Grid.Row = "4" Grid.Column = "1"/>
+        <Label Content = "Password" Grid.Row = "4" Grid.Column = "0" Height = "{Binding HeightlblPassword}"/>
+        <PasswordBox x:Name = "TxtPassword" Grid.Row = "4" Grid.Column = "1" Height = "{Binding HeightTxtPassword}"/>
         
         <StackPanel Grid.Row = "5" Grid.Column = "0" Orientation = "Vertical">
-            <Button Content="Guardar" Command = "{Binding Instancia}" CommandParameter ="Guardar"/>
+            <Button Content="Guardar" Command = "{Binding Instancia}" CommandParameter ="{Binding ElementName = FrmUsuario}"/>
             <Button Content="Cancelar" Command = "{Binding Instancia}" CommandParameter ="Cancelar"/>
         </StackPanel>
     </Grid>
-</Window>
+</mah:MetroWindow>
