--- a/Views/UsuariosView.xaml
+++ b/Views/UsuariosView.xaml
@@ -1,8 +1,9 @@
-<Window x:Class="ControlDeColegio.Views.UsuariosView"
+<mah:MetroWindow x:Class="ControlDeColegio.Views.UsuariosView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:ControlDeColegio"
         mc:Ignorable="d"
         Title="Lista de Usuarios" Height="450" Width="800">
@@ -14,10 +15,23 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <DataGrid SelectedItem = "{Binding Seleccionado}" Grid.Row = "0" Grid.Column = "0" ItemsSource = "{Binding Usuarios}" AutoGenerateColumns = "true"/>
+        <DataGrid ColumnWidth = "*" CanUserAddRows = "False" SelectedItem = "{Binding Seleccionado}" Grid.Row = "0" Grid.Column = "0" ItemsSource = "{Binding Usuarios}" AutoGenerateColumns = "false">
+            <DataGrid.Columns>
+                <DataGridCheckBoxColumn ElementStyle="{DynamicResource MetroDataGridCheckBox}"
+                                EditingElementStyle="{DynamicResource MetroDataGridCheckBox}"
+                                Header="Seleccionar"
+                                Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Path=IsSelected, Mode=OneWay}" />
+                <DataGridTextColumn Binding = "{Binding Apellidos}" Header = "Apellidos" IsReadOnly = "true"/>
+                <DataGridTextColumn Binding = "{Binding Nombres}" Header = "Nombre" IsReadOnly = "true"/>
+                <DataGridCheckBoxColumn Binding = "{Binding Enable}" Header = "Enable" IsReadOnly = "true"/>
+                <DataGridTextColumn Binding = "{Binding Username}" Header = "Username" IsReadOnly = "true"/>
+                <DataGridTextColumn Binding = "{Binding Email}" Header = "Email" IsReadOnly = "true"/>
+            </DataGrid.Columns>
+        </DataGrid>
         <StackPanel Grid.Row = "1" Grid.Column = "0" Orientation = "Vertical">
-            <Button Grid.Row = "1" Grid.Column = "0" Content="Nuevo" Command= "{Binding Instancia}" CommandParameter ="Nuevo"/>
-            <Button Grid.Row = "1" Grid.Column = "0" Content="Eliminar" Command= "{Binding Instancia}" CommandParameter ="Eliminar"/>
+            <Button Content="Nuevo" Command= "{Binding Instancia}" CommandParameter ="Nuevo"/>
+            <Button Content="Eliminar" Command= "{Binding Instancia}" CommandParameter ="Eliminar"/>
+            <Button Content="Modificar" Command = "{Binding Instancia}" CommandParameter = "Modificar"/>
         </StackPanel>
     </Grid>
-</Window>
+</mah:MetroWindow>
