Se agregaron messageBox de advertencia y confirmacion

--- a/Views/UsuarioView.xaml
+++ b/Views/UsuarioView.xaml
@@ -4,6 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ControlDeColegio"
+        xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
+        Dialog:DialogParticipation.Register="{Binding}"
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
         Title="Formulario de Usuarios" Height="250" Width="600" WindowStartupLocation = "CenterScreen" Name="FrmUsuario">
