--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -21,6 +21,28 @@
                     <MenuItem Header = "Catalogos">
                         <MenuItem Header = "Usuarios" Command = "{Binding Instancia}" CommandParameter = "Usuarios"/>
                         <MenuItem Header = "Roles" Command = "{Binding Instancia}" CommandParameter = "Roles"/>
+                        <MenuItem Header = "Alumnos"/>
+                        <MenuItem Header = "Horarios"/>
+                        <MenuItem Header = "Salones"/>
+                        <MenuItem Header = "Instructores"/>
+                        <MenuItem Header = "Carreras"/>
+                        <MenuItem Header = "Modulos"/>
+                        <MenuItem Header = "Seminarios"/>
+                        <MenuItem Header = "Detalle de Actividades"/>
+                        <MenuItem Header = "Asignacion de Alumno"/>
+                        <MenuItem Header = "Detalles de Notas"/>
+                        <MenuItem Header = "Clases"/>
+                        <!-- <MenuItem Header = "Alumnos" Command = "{Binding Instancia}" CommandParameter = "Alumnos"/>
+                        <MenuItem Header = "Horarios" Command = "{Binding Instancia}" CommandParameter = "Horarios"/>
+                        <MenuItem Header = "Salones" Command = "{Binding Instancia}" CommandParameter = "Salones"/>
+                        <MenuItem Header = "Instructores" Command = "{Binding Instancia}" CommandParameter = "Instructores"/>
+                        <MenuItem Header = "Carreras" Command = "{Binding Instancia}" CommandParameter = "Carreras"/>
+                        <MenuItem Header = "Modulos" Command = "{Binding Instancia}" CommandParameter = "Modulos"/>
+                        <MenuItem Header = "Seminarios" Command = "{Binding Instancia}" CommandParameter = "Seminarios"/>
+                        <MenuItem Header = "DetallesActividad" Command = "{Binding Instancia}" CommandParameter = "DetallesActividad"/>
+                        <MenuItem Header = "AsignacionAlumno" Command = "{Binding Instancia}" CommandParameter = "AsignacionAlumno"/>
+                        <MenuItem Header = "DetalleNota" Command = "{Binding Instancia}" CommandParameter = "DetalleNota"/>
+                        <MenuItem Header = "Clases" Command = "{Binding Instancia}" CommandParameter = "Clases"/> -->
                         <MenuItem Header = "Reportes"/>
                     </MenuItem>
                     <Separator/>
