--- a/Views/RolFormView.xaml
+++ b/Views/RolFormView.xaml
@@ -17,7 +17,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         
-        <Label Content = "Rol Name" Grid.Row = "0" Grid.Column = "0"/>
+        <Label Content = "Nombre" Grid.Row = "0" Grid.Column = "0"/>
         <TextBox Grid.Row = "0" Grid.Column = "1" Text = "{Binding Nombre}"/>
         
         <StackPanel Grid.Row = "1" Grid.Column = "0" Orientation = "Vertical">
