--- a/Views/HorarioFormView.xaml
+++ b/Views/HorarioFormView.xaml
@@ -11,7 +11,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height = "30"/>
             <RowDefinition Height = "30"/>
-            <RowDefinition Height = "30"/>
+            <RowDefinition Height = "120"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width = "120"/>
@@ -24,7 +24,7 @@
         <Label Content = "Horario Final" Grid.Row = "1" Grid.Column = "0"/>
         <TextBox Margin = "0, 2, 2, 2" Grid.Row = "1" Grid.Column = "1" Text = "{Binding HorarioFinal}"/>
         
-        <StackPanel Margin = "2" Grid.Row = "2" Grid.ColumnSpan = "2" Orientation = "Horizontal">
+        <StackPanel Margin = "2" Grid.Row = "2" Grid.ColumnSpan = "2" Orientation = "Vertical">
             <Button Content="Guardar" Command = "{Binding Instancia}" CommandParameter ="{Binding ElementName = FrmHorario}"/>
         </StackPanel>
     </Grid>
