Se agrego la vista de Instructor y su formulario

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -23,9 +23,9 @@
                         <MenuItem Header = "Roles" Command = "{Binding Instancia}" CommandParameter = "Roles"/>
                         <MenuItem Header = "Horarios" Command = "{Binding Instancia}" CommandParameter = "Horario"/>
                         <MenuItem Header = "Salones" Command = "{Binding Instancia}" CommandParameter = "Salon"/>
+                        <MenuItem Header = "Instructores" Command = "{Binding Instancia}" CommandParameter = "Instructor"/>
                         <MenuItem Header = "Alumnos"/>
                         <MenuItem Header = "Salones"/>
-                        <MenuItem Header = "Instructores"/>
                         <MenuItem Header = "Carreras"/>
                         <MenuItem Header = "Modulos"/>
                         <MenuItem Header = "Seminarios"/>
@@ -34,7 +34,6 @@
                         <MenuItem Header = "Detalles de Notas"/>
                         <MenuItem Header = "Clases"/>
                         <!-- <MenuItem Header = "Alumnos" Command = "{Binding Instancia}" CommandParameter = "Alumnos"/> -->
-                        <!-- <MenuItem Header = "Instructores" Command = "{Binding Instancia}" CommandParameter = "Instructores"/> -->
                         <!-- <MenuItem Header = "Carreras" Command = "{Binding Instancia}" CommandParameter = "Carreras"/> -->
                         <!-- <MenuItem Header = "Modulos" Command = "{Binding Instancia}" CommandParameter = "Modulos"/> -->
                         <!-- <MenuItem Header = "Seminarios" Command = "{Binding Instancia}" CommandParameter = "Seminarios"/> -->
