--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -26,13 +26,12 @@
                         <MenuItem Header = "Instructores" Command = "{Binding Instancia}" CommandParameter = "Instructor"/>
                         <MenuItem Header = "Carreras" Command = "{Binding Instancia}" CommandParameter = "Carrera"/>
                         <MenuItem Header = "Modulos" Command = "{Binding Instancia}" CommandParameter = "Modulo"/>
-                        <MenuItem Header = "Seminarios"/>
+                        <MenuItem Header = "Seminarios" Command = "{Binding Instancia}" CommandParameter = "Seminario"/>
                         <MenuItem Header = "Detalle de Actividades"/>
                         <MenuItem Header = "Asignacion de Alumno"/>
                         <MenuItem Header = "Detalles de Notas"/>
                         <MenuItem Header = "Clases"/>
                         <!-- <MenuItem Header = "Alumnos" Command = "{Binding Instancia}" CommandParameter = "Alumnos"/> -->
-                        <!-- <MenuItem Header = "Seminarios" Command = "{Binding Instancia}" CommandParameter = "Seminarios"/> -->
                         <!-- <MenuItem Header = "DetallesActividad" Command = "{Binding Instancia}" CommandParameter = "DetallesActividad"/> -->
                         <!-- <MenuItem Header = "AsignacionAlumno" Command = "{Binding Instancia}" CommandParameter = "AsignacionAlumno"/> -->
                         <!-- <MenuItem Header = "DetalleNota" Command = "{Binding Instancia}" CommandParameter = "DetalleNota"/> -->
