--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -28,11 +28,10 @@
                         <MenuItem Header = "Modulos" Command = "{Binding Instancia}" CommandParameter = "Modulo"/>
                         <MenuItem Header = "Seminarios" Command = "{Binding Instancia}" CommandParameter = "Seminario"/>
                         <MenuItem Header = "Detalles de Actividad" Command = "{Binding Instancia}" CommandParameter = "DetalleActividad"/>
-                        <MenuItem Header = "Asignacion de Alumno"/>
+                        <MenuItem Header = "Asignacion de Alumno" Command = "{Binding Instancia}" CommandParameter = "AsignacionAlumno"/>
                         <MenuItem Header = "Detalles de Notas"/>
                         <MenuItem Header = "Clases"/>
                         <!-- <MenuItem Header = "Alumnos" Command = "{Binding Instancia}" CommandParameter = "Alumnos"/> -->
-                        <!-- <MenuItem Header = "AsignacionAlumno" Command = "{Binding Instancia}" CommandParameter = "AsignacionAlumno"/> -->
                         <!-- <MenuItem Header = "DetalleNota" Command = "{Binding Instancia}" CommandParameter = "DetalleNota"/> -->
                         <!-- <MenuItem Header = "Clases" Command = "{Binding Instancia}" CommandParameter = "Clases"/> -->
                         <MenuItem Header = "Reportes"/>
