vista de DetalleNota y formulario

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -29,10 +29,9 @@
                         <MenuItem Header = "Seminarios" Command = "{Binding Instancia}" CommandParameter = "Seminario"/>
                         <MenuItem Header = "Detalles de Actividad" Command = "{Binding Instancia}" CommandParameter = "DetalleActividad"/>
                         <MenuItem Header = "Asignacion de Alumno" Command = "{Binding Instancia}" CommandParameter = "AsignacionAlumno"/>
-                        <MenuItem Header = "Detalles de Notas"/>
+                        <MenuItem Header = "Detalle de Nota" Command = "{Binding Instancia}" CommandParameter = "DetalleNota"/>
                         <MenuItem Header = "Clases"/>
                         <!-- <MenuItem Header = "Alumnos" Command = "{Binding Instancia}" CommandParameter = "Alumnos"/> -->
-                        <!-- <MenuItem Header = "DetalleNota" Command = "{Binding Instancia}" CommandParameter = "DetalleNota"/> -->
                         <!-- <MenuItem Header = "Clases" Command = "{Binding Instancia}" CommandParameter = "Clases"/> -->
                         <MenuItem Header = "Reportes"/>
                     </MenuItem>
