--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -21,6 +21,7 @@
                     <MenuItem Header = "Catalogos">
                         <MenuItem Header = "Usuarios" Command = "{Binding Instancia}" CommandParameter = "Usuarios"/>
                         <MenuItem Header = "Roles" Command = "{Binding Instancia}" CommandParameter = "Roles"/>
+                        <MenuItem Header = "Alumnos" Command = "{Binding Instancia}" CommandParameter = "Alumno"/>
                         <MenuItem Header = "Horarios" Command = "{Binding Instancia}" CommandParameter = "Horario"/>
                         <MenuItem Header = "Salones" Command = "{Binding Instancia}" CommandParameter = "Salon"/>
                         <MenuItem Header = "Instructores" Command = "{Binding Instancia}" CommandParameter = "Instructor"/>
@@ -31,7 +32,6 @@
                         <MenuItem Header = "Asignacion de Alumno" Command = "{Binding Instancia}" CommandParameter = "AsignacionAlumno"/>
                         <MenuItem Header = "Detalle de Nota" Command = "{Binding Instancia}" CommandParameter = "DetalleNota"/>
                         <MenuItem Header = "Clases" Command = "{Binding Instancia}" CommandParameter = "Clase"/>
-                        <!-- <MenuItem Header = "Alumnos" Command = "{Binding Instancia}" CommandParameter = "Alumnos"/> -->
                         <MenuItem Header = "Reportes"/>
                     </MenuItem>
                     <Separator/>
