--- a/Views/ClaseFormView.xaml
+++ b/Views/ClaseFormView.xaml
@@ -2,8 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro" Dialog:DialogParticipation.Register="{Binding}"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ControlDeColegio"
         mc:Ignorable="d"
         Title="Formulario de Clase" Height="400" Width="650" WindowStartupLocation = "CenterScreen" Name="FrmClase">
@@ -25,28 +26,28 @@
         </Grid.ColumnDefinitions>
         
         <Label Content = "Ciclo" Grid.Row = "0" Grid.Column = "0"/>
-        <TextBox Margin = "0, 2, 2, 2" Grid.Row = "0" Grid.Column = "1" Text = "{Binding Ciclo}"/>
+        <ComboBox Margin = "0, 2, 2, 2" Grid.Row = "0" Grid.Column = "1" ItemsSource = "{Binding Ciclos}"/>
         
         <Label Content = "Cupo Máximo" Grid.Row = "1" Grid.Column = "0"/>
-        <TextBox Margin = "0, 2, 2, 2" Grid.Row = "1" Grid.Column = "1" Text = "{Binding CupoMaximo}"/>
+        <ComboBox Margin = "0, 2, 2, 2" Grid.Row = "1" Grid.Column = "1" ItemsSource = "{Binding CupoMaximo}"/>
         
         <Label Content = "Cupo Mínimo" Grid.Row = "2" Grid.Column = "0"/>
-        <TextBox Margin = "0, 2, 2, 2" Grid.Row = "2" Grid.Column = "1" Text = "{Binding CupoMinimo}"/>
+        <ComboBox Margin = "0, 2, 2, 2" Grid.Row = "2" Grid.Column = "1" ItemsSource = "{Binding CupoMinimo}"/>
         
         <Label Content = "Descripción" Grid.Row = "3" Grid.Column = "0"/>
         <TextBox Margin = "0, 2, 2, 2" Grid.Row = "3" Grid.Column = "1" Text = "{Binding Descripcion}"/>
         
         <Label Content = "Carrera" Grid.Row = "4" Grid.Column = "0"/>
-        <TextBox Margin = "0, 2, 2, 2" Grid.Row = "4" Grid.Column = "1" Text = "{Binding CarreraId}"/>
+        <ComboBox Margin = "0, 2, 2, 2" Grid.Row = "4" Grid.Column = "1" ItemsSource = "{Binding Carreras}"/>
         
         <Label Content = "Horario" Grid.Row = "5" Grid.Column = "0"/>
-        <TextBox Margin = "0, 2, 2, 2" Grid.Row = "5" Grid.Column = "1" Text = "{Binding HorarioId}"/>
+        <ComboBox Margin = "0, 2, 2, 2" Grid.Row = "5" Grid.Column = "1" ItemsSource = "{Binding Horarios}"/>
         
         <Label Content = "Instructor" Grid.Row = "6" Grid.Column = "0"/>
-        <TextBox Margin = "0, 2, 2, 2" Grid.Row = "6" Grid.Column = "1" Text = "{Binding InstructorId}"/>
+        <ComboBox Margin = "0, 2, 2, 2" Grid.Row = "6" Grid.Column = "1" ItemsSource = "{Binding Instructores}"/>
         
         <Label Content = "Salon" Grid.Row = "7" Grid.Column = "0"/>
-        <TextBox Margin = "0, 2, 2, 2" Grid.Row = "7" Grid.Column = "1" Text = "{Binding SalonId}"/>
+        <ComboBox Margin = "0, 2, 2, 2" Grid.Row = "7" Grid.Column = "1" ItemsSource = "{Binding Salones}"/>
 
         <StackPanel Margin = "2" Grid.Row = "7" Grid.ColumnSpan = "2" Orientation = "Vertical">
             <Button Content="Guardar" Command = "{Binding Instancia}" CommandParameter ="{Binding ElementName = FrmClase}"/>
