--- a/Views/SalonFormView.xaml
+++ b/Views/SalonFormView.xaml
@@ -4,9 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:ControlDeColegio"
+        Dialog:DialogParticipation.Register="{Binding}"
         mc:Ignorable="d"
-        Title="Formulario de Horarios" Height="250" Width="600" WindowStartupLocation = "CenterScreen" Name="FrmSalon">
+        Title="{Binding Titulo}" Height="250" Width="600" WindowStartupLocation = "CenterScreen" Name="FrmSalon">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height = "30"/>
