--- a/Views/HorarioFormView.xaml
+++ b/Views/HorarioFormView.xaml
@@ -4,9 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        xmlns:Dialog="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:ControlDeColegio"
+        Dialog:DialogParticipation.Register="{Binding}"
         mc:Ignorable="d"
-        Title="Formulario de Horarios" Height="250" Width="600" WindowStartupLocation = "CenterScreen" Name="FrmHorario">
+        Title="{Binding Titulo}" Height="250" Width="600" WindowStartupLocation = "CenterScreen" Name="FrmHorario">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height = "30"/>
@@ -19,10 +21,12 @@
         </Grid.ColumnDefinitions>
         
         <Label Content = "Horario Inicial" Grid.Row = "0" Grid.Column = "0"/>
-        <TextBox Margin = "0, 2, 2, 2" Grid.Row = "0" Grid.Column = "1" Text = "{Binding HorarioInicio}"/>
+        <!-- <TextBox Margin = "0, 2, 2, 2" Grid.Row = "0" Grid.Column = "1" Text = "{Binding HorarioInicio}"/> -->
+        <ComboBox Margin = "0, 2, 2, 2" Grid.Row = "0" Grid.Column = "1" ItemsSource = "{Binding Horarios}" SelectedValue="{Binding HorarioInicialDefinido}" Text="{Binding HorarioInicialDefinido}"/>
         
         <Label Content = "Horario Final" Grid.Row = "1" Grid.Column = "0"/>
-        <TextBox Margin = "0, 2, 2, 2" Grid.Row = "1" Grid.Column = "1" Text = "{Binding HorarioFinal}"/>
+        <!-- <TextBox Margin = "0, 2, 2, 2" Grid.Row = "1" Grid.Column = "1" Text = "{Binding HorarioFinal}"/> -->
+        <ComboBox Margin = "0, 2, 2, 2" Grid.Row = "1" Grid.Column = "1" ItemsSource = "{Binding Horarios}" SelectedValue="{Binding HorarioFinalDefinido}" Text="{Binding HorarioFinalDefinido}"/>
         
         <StackPanel Margin = "2" Grid.Row = "2" Grid.ColumnSpan = "2" Orientation = "Vertical">
             <Button Content="Guardar" Command = "{Binding Instancia}" CommandParameter ="{Binding ElementName = FrmHorario}"/>
